app/src/test/resources/programs/invalid/blocks/unclosed_braces.exe
foo main() -> Int = {
    Int a;
    Int b;
    /**/
    Int max = {
        if(a>b) then {
            a;
        } else {
            b;
        };
}